# aluguel-de-carros-api

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: entities.rs  lib.rs  main.rs  middleware.rs  routes.rs
test/: requirements.txt  test_api.py
