[package]
name = "aluguel-de-carros-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = "0.4.44"
hex = "0.4.3"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { "version" = "1.52.1", "features" = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
